--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 
                 <div class="coat-of-arms">
-                    <img src="../furryisbad/Снимок экрана 2025-02-05 214724.png" alt="Средневековая гравюра" 
+                    <img src="../Снимок экрана 2025-02-05 214724.png" alt="Средневековая гравюра" 
                          style="width: 100%; border: 3px solid #8b5e3c;">
                 </div>
             </section>
